--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Weebly Cloud API library",
     "type": "library",
     "require": {
-        "php": "^5.4.0 || ^7.0",
+        "php": "^5.4.0 || ^7.0 || ^8.0 || ^8.1",
         "ext-curl": "*",
         "ext-json": "*"
     },
